--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "url": "https://github.com/wmohammad83/teamProfileGenerator/issues"
   },
   "homepage": "https://github.com/wmohammad83/teamProfileGenerator#readme",
-  "dependencies": {
-    "inquirer": "^9.1.4",
+  "devDependencies": {
     "jest": "^29.4.3"
+  },
+  "dependencies": {
+    "inquirer": "^6.5.0"
   }
 }
